--- a/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
+++ b/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
@@ -38,6 +38,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "path = '/Users/giogi/Desktop/Stage INFN/PID ITS/data/V0/particles_pid_520147.parquet'\n",
+    "df = pd.read_parquet(path)\n",
+    "df.particle.isna().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    469369.000000\n",
+       "mean          0.888691\n",
+       "std           1.195895\n",
+       "min           0.003675\n",
+       "25%           0.421506\n",
+       "50%           0.571466\n",
+       "75%           1.051295\n",
+       "max         202.171112\n",
+       "Name: p, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "path = '/Users/giogi/Desktop/Stage INFN/PID ITS/data/V0/particles_pid_520143.parquet'\n",
+    "df = pd.read_parquet(path)\n",
+    "df.columns\n",
+    "df.p.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
