--- a/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
+++ b/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
@@ -161,33 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    52477.000000\n",
-       "mean        11.109610\n",
-       "std         48.636182\n",
-       "min          0.000000\n",
-       "25%          3.025748\n",
-       "50%          5.488883\n",
-       "75%         10.075404\n",
-       "max       7227.000000\n",
-       "Name: beta_pweight, dtype: float64"
+       "array([-1.,  3.,  4.,  1.,  2.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "path = '/home/galucia/PID_ITS/data/V0/TrainSet_beta_pflat.parquet.gzip'\n",
+    "path = '/data/shared/ITS/ML/particles_pid_520147_itstpc.parquet'\n",
     "df = pd.read_parquet(path)\n",
-    "df.beta_pweight.describe()\n"
+    "df.particle.unique()\n",
+    "\n"
    ]
   },
   {
