--- a/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
+++ b/PID ITS - Giorgio Alberto/code/data_fast_access.ipynb
@@ -161,16 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.,  3.,  4.,  1.,  2.])"
+       "Index(['p', 'pt', 'pTPC', 'ptTPC', 'pITS', 'ptITS', 'rofBC', 'tgL',\n",
+       "       'clSizeCosLam', 'dedx', 'nSigmaDeu', 'nSigmaP', 'nSigmaK', 'nSigmaPi',\n",
+       "       'nSigmaE', 'tpcITSchi2', 'isPositive', 'nClusTPC', 'nClusITS',\n",
+       "       'ClSizeL0', 'SnPhiL0', 'TanLamL0', 'PattIDL0', 'ClSizeL1', 'SnPhiL1',\n",
+       "       'TanLamL1', 'PattIDL1', 'ClSizeL2', 'SnPhiL2', 'TanLamL2', 'PattIDL2',\n",
+       "       'ClSizeL3', 'SnPhiL3', 'TanLamL3', 'PattIDL3', 'ClSizeL4', 'SnPhiL4',\n",
+       "       'TanLamL4', 'PattIDL4', 'ClSizeL5', 'SnPhiL5', 'TanLamL5', 'PattIDL5',\n",
+       "       'ClSizeL6', 'SnPhiL6', 'TanLamL6', 'PattIDL6', 'particle'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +187,7 @@
     "import pandas as pd\n",
     "path = '/data/shared/ITS/ML/particles_pid_520147_itstpc.parquet'\n",
     "df = pd.read_parquet(path)\n",
-    "df.particle.unique()\n",
+    "df.columns\n",
     "\n"
    ]
   },
